--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base.pug
 
 block content 
-    h1 Edit video 
+    h4 Change Title of video
+    form(action="")
+        input(placeholder="Video Title")
+        input(placeholder="Save",type="submit")
