--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,6 +2,6 @@ extends base.pug
 
 block content 
     h4 Change Title of video
-    form(action="")
-        input(placeholder="Video Title")
+    form(method="POST")
+        input(name="title", placeholder="Video Title", value=video.title,required)
         input(placeholder="Save",type="submit")
