--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -4,4 +4,6 @@ block content
     h4 Change Title of video
     form(method="POST")
         input(name="title", placeholder="Video Title", value=video.title,required)
+        input(placeholder="Description", required,type="text", value=video.description name="description" minLength=20)
+        input(placeholder="Hashtags, separated by comma.", required,type="text",value=video.hashtags.join(), name="hashtags")
         input(placeholder="Save",type="submit")
