--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,7 @@ block content
         input(placeholder="Password",name= "password", type="password",required)
         input(type="submit",value="Login")
         br
-        a(href="http://github.com/login/oauth/authorize?client_id=e791836840ed6ec92614&allow_signup=false") Continue with Github &rarr;
+        a(href="/users/github/start") Continue with Github &rarr;
     hr
     div
         span Don't have an account? 
