--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,4 +1,8 @@
 extends ../base
+include ../mixins/video
 
-block content 
-    h1 Hello 
+block content
+  each video in videos 
+    +video(video)
+  else 
+    li Sorry nothing found.
