--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,5 +1,18 @@
-@import "../scss/_variables";
+// Config
+@import "./config/_variables.scss";
+@import "./config/_reset.scss";
+
+// Components
+
+@import "./components/header.scss" // Screens
+  // Defaults
+  a {
+  color: inherit;
+  text-decoration: none;
+}
 body {
-  background-color: $blue;
-  color: $color;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $bg;
+  color: white;
 }
