--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -4,9 +4,17 @@
 
 // Components
 
-@import "./components/header.scss" // Screens
-  // Defaults
-  a {
+@import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/video.scss";
+@import "./components/shared.scss";
+
+// Screens
+@import "./screen/home.scss";
+@import "./screen/search.scss";
+
+// Defaults
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -15,4 +23,11 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: $bg;
   color: white;
+}
+
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
