--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,8 +1,11 @@
 header 
-    a(href="/")
+    a(href="/").header__logo
         i.fab.fa-youtube
     nav
         ul
+            li
+                a(href="/search")
+                    i.fas.fa-search
             if loggedIn
                 li 
                     a(href="/videos/upload") Upload Video 
@@ -12,10 +15,12 @@ header
                     a(href="/users/edit") Edit Profile
                 li
                     a(href="/users/logout") Log Out   
-            else
                 li 
-                    a(href="/join") Join         
+                    span Mode
+                        input(type="checkbox") 
+
+            else
                 li
-                    a(href="/login") Login  
-            li 
-                a(href="/search") Search     
+                    a(href="/login") Login 
+                li 
+                    a(href="/join").header__btn Join         
