--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -28,4 +28,9 @@ header {
       border-radius: 5px;
     }
   }
+  .header__title {
+    font-size: 28px;
+    color: white;
+    padding: 0px 15px;
+  }
 }
