--- a/src/client/scss/screen/search.scss
+++ b/src/client/scss/screen/search.scss
@@ -1,9 +1,8 @@
 .search__form {
+  margin-bottom: 60px;
   display: flex;
-  flex-direction: column;
-  max-width: 420px;
-  margin: 0 auto;
-
+  position: relative;
+  align-items: center;
   input {
     all: unset;
     padding: 10px 20px;
@@ -13,10 +12,17 @@
     margin-bottom: 10px;
     font-size: 16px;
     color: white;
+    width: 90%;
   }
-  input[type="submit"] {
-    background-color: rgba(0, 0, 0, 0.3);
+  button {
+    all: unset;
+  }
+  button {
+    position: absolute;
+    right: 15px;
+    top: 13px;
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
-    padding: 10px;
+    cursor: pointer;
   }
 }
