--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -8,10 +8,14 @@
 @import "./components/footer.scss";
 @import "./components/video.scss";
 @import "./components/shared.scss";
+@import "./components/forms.scss";
+@import "./components/social-login.scss";
 
 // Screens
 @import "./screen/home.scss";
 @import "./screen/search.scss";
+@import "./screen/profile.scss";
+@import "./screen/edit-profile.scss";
 
 // Defaults
 a {
