--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -33,4 +33,9 @@ header {
     color: white;
     padding: 0px 15px;
   }
+  .header__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
 }
