--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -11,11 +11,15 @@ header
                 li 
                     a(href="/videos/upload") Upload Video 
                 li
-                    a(href=`/users/${loggedInUser._id}`) My Profile
-                li
                     a(href="/users/edit") Edit Profile
                 li
                     a(href="/users/logout") Log Out   
+                li
+                    a(href=`/users/${loggedInUser._id}`) My Profile
+                        if !loggedInUser.avatarUrl
+                            span 😊
+                        else
+                            img.header__avatar(src="/" + loggedInUser.avatarUrl)
                 li 
                     span Mode
                         input(type="checkbox") 
