--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -7,7 +7,7 @@ form {
   border: 1px solid rgba($color: #fff, $alpha: 0.3);
 }
 
-input {
+input:not(input[type="range"]) {
   all: unset;
   padding: 10px 20px;
   border-radius: 5px;
