--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,8 @@
 extends base.pug
 
 block content
-    div#videoContainer
+    div#videoContainer(data-id=video._id) 
+        //- 템플릿에 정보 남기기 // data attribute data-로 저장
         video(src="/" + video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
