--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,7 @@
 extends base.pug
 
-block content   
+block content
+    video#preview
     div#startBtn Start Recording
     if errorMessage
         span=errorMessage
