--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,12 +2,14 @@ extends base.pug
 
 block content
     video#preview
-    div#startBtn Start Recording
+    div#actionBtn Start Recording
     if errorMessage
         span=errorMessage
     form(method="POST", action="/videos/upload", enctype="multipart/form-data")
         label(for="video") Video File
         input(type="file",accept="video/*",required,id="video",name="video")
+        label(for="thumb") Thumbnail File
+        input(type="file",accept="image/*",required,id="thumb",name="thumb")
         input(placeholder="Title", required,type="text" name="title" maxLength=80)
         input(placeholder="Description", required,type="text" name="description" minLength=20)
         input(placeholder="Hashtags, separated by comma.", required,type="text" name="hashtags")
