# 14.6 Thumbnail Upload part Two

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -17,6 +17,7 @@
 @import "./screen/search.scss";
 @import "./screen/profile.scss";
 @import "./screen/edit-profile.scss";
+@import "./screen/upload.scss";
 
 // Defaults
 a {
