--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -7,15 +7,16 @@ form {
   border: 1px solid rgba($color: #fff, $alpha: 0.3);
 }
 
-input:not(input[type="range"]) {
+input:not(input[type="range"]),
+input[type="submit"] {
   all: unset;
   padding: 10px 20px;
   border-radius: 5px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   background-color: black;
+  color: white;
   margin-bottom: 10px;
   font-size: 16px;
-  color: white;
   width: 90%;
   &::placeholder {
     color: rgba(255, 255, 255, 0.7);
@@ -26,9 +27,17 @@ input[type="submit"],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  background-color: white;
-  color: rgba($color: $red, $alpha: 1);
-  text-align: center;
+  background-color: white !important;
+  color: rgba($color: $red, $alpha: 1) !important;
+  text-align: center !important;
   cursor: pointer;
   display: block;
+  border: none;
+  &:focus {
+    outline: none;
+  }
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
